refactor: 서버별 마지막 정보 조회 형식을 MAP으로 변경